--- a/src/SerialLoops/Controls/ScriptPreviewCanvas.axaml
+++ b/src/SerialLoops/Controls/ScriptPreviewCanvas.axaml
@@ -12,6 +12,72 @@
     </UserControl.Resources>
 
     <Canvas Width="256" Height="384">
+        <!-- Chessboard -->
+        <Image Source="{Binding ChessBoard}" Canvas.Left="8" Canvas.Top="188"/>
+
+        <ItemsControl ItemsSource="{Binding ChessGuideSpaces}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas Width="256" Height="384"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate x:DataType="Point">
+                    <Rectangle Width="20" Height="19" Fill="DarkRed" Opacity="0.5"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.Styles>
+                <Style Selector="ItemsControl > ContentPresenter" x:DataType="Point">
+                    <Setter Property="(Canvas.Left)" Value="{Binding X}"/>
+                    <Setter Property="(Canvas.Top)" Value="{Binding Y}"/>
+                </Style>
+            </ItemsControl.Styles>
+        </ItemsControl>
+
+        <ItemsControl ItemsSource="{Binding ChessHighlightedSpaces}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas Width="256" Height="384"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate x:DataType="Point">
+                    <Rectangle Width="20" Height="19" Fill="Gold" Opacity="0.5"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.Styles>
+                <Style Selector="ItemsControl > ContentPresenter" x:DataType="Point">
+                    <Setter Property="(Canvas.Left)" Value="{Binding X}"/>
+                    <Setter Property="(Canvas.Top)" Value="{Binding Y}"/>
+                </Style>
+            </ItemsControl.Styles>
+        </ItemsControl>
+
+        <ItemsControl ItemsSource="{Binding ChessCrossedSpaces}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas Width="256" Height="384"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate x:DataType="Point">
+                    <Svg Path="avares://SerialLoops/Assets/Icons/Close.svg" Width="20" Height="20" Opacity="0.5">
+                        <Svg.Styles>
+                            <Style Selector="Svg">
+                                <Setter Property="Css" Value="path { fill: #FF0000 !important }" />
+                            </Style>
+                        </Svg.Styles>
+                    </Svg>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.Styles>
+                <Style Selector="ItemsControl > ContentPresenter" x:DataType="Point">
+                    <Setter Property="(Canvas.Left)" Value="{Binding X}"/>
+                    <Setter Property="(Canvas.Top)" Value="{Binding Y}"/>
+                </Style>
+            </ItemsControl.Styles>
+        </ItemsControl>
+
         <!-- Background (TEX_BG) -->
         <Image Source="{Binding Bg}" Canvas.Left="{Binding BgOrigin.X}"
                Canvas.Top="{Binding BgOrigin.Y}"/>
@@ -156,6 +222,48 @@
         <!-- Dialogue -->
         <Image Canvas.Left="0" Canvas.Top="{Binding DialogueY}" Source="{Binding Dialogue}"/>
 
+        <!-- Topic Flyout -->
+        <controls:AnimatingImage Canvas.Left="180" Canvas.Top="{Binding TopicFlyoutY}"
+                                 Source="{Binding TopicFlyout}" Name="TopicFlyout">
+            <controls:AnimatingImage.Styles>
+                <Style Selector="controls|AnimatingImage:animating">
+                    <Style.Animations>
+                        <Animation Duration="0:0:0.5">
+                            <KeyFrame Cue="0%">
+                                <Setter Property="Canvas.Left" Value="256"/>
+                            </KeyFrame>
+                            <KeyFrame Cue="100%">
+                                <Setter Property="Canvas.Left" Value="180"/>
+                            </KeyFrame>
+                        </Animation>
+                    </Style.Animations>
+                </Style>
+            </controls:AnimatingImage.Styles>
+        </controls:AnimatingImage>
+
+        <!-- Choices -->
+        <ItemsControl ItemsSource="{Binding CurrentChoices}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas Width="256" Height="384"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate x:DataType="vm:PositionedChoice">
+                    <Image Source="{Binding Graphic}"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.Styles>
+                <Style Selector="ItemsControl > ContentPresenter" x:DataType="vm:PositionedChoice">
+                    <Setter Property="(Canvas.Left)" Value="19"/>
+                    <Setter Property="(Canvas.Top)" Value="{Binding Y}"/>
+                </Style>
+            </ItemsControl.Styles>
+        </ItemsControl>
+
+        <!-- Haruhi Meter -->
+        <Image Canvas.Left="0" Canvas.Top="192" Source="{Binding HaruhiMeter}"
+               IsVisible="{Binding HaruhiMeterVisible}"/>
     </Canvas>
 </UserControl>
 
