Improve log viewer by using AvaloniaEdit

--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -40,6 +40,7 @@
         <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
         <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
+        <StyleInclude Source="avares://AvaloniaEdit/Themes/Fluent/AvaloniaEdit.xaml" />
 
         <!-- Toolbar styling -->
         <Style Selector="toolbar|Toolbar">
