--- a/src/SerialLoops/Views/Dialogs/LogViewerDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/LogViewerDialog.axaml
@@ -4,18 +4,18 @@
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
+        xmlns:avaloniaedit="using:AvaloniaEdit"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SerialLoops.Views.Dialogs.LogViewerDialog"
         x:DataType="vm:LogViewerDialogViewModel"
         Title="{Binding Title}"
-        SizeToContent="WidthAndHeight"
+        Height="600" Width="800"
         Name="Dialog">
     <Grid RowDefinitions="Auto,*,Auto" ColumnDefinitions="*,Auto" Margin="10">
         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center"
-                 Width="600" Height="400" Text="{Binding Log}"
-                 IsReadOnly="True" Margin="5"/>
-        <Button Grid.Row="2" Grid.Column="1" Content="{x:Static assets:Strings.TabaloniaCloseItem}"
+        <avaloniaedit:TextEditor Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center"
+                 Document="{Binding Log}" IsReadOnly="True" Margin="5"/>
+        <Button Grid.Row="2" Grid.Column="1" Content="{x:Static assets:Strings.Exit}"
                 Command="{Binding CloseCommand}"
                 CommandParameter="{Binding #Dialog}" IsCancel="True"/>
     </Grid>
