--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -174,6 +174,10 @@
             <Setter Property="FontSize" Value="24" />
             <Setter Property="FontWeight" Value="Bold" />
         </Style>
+        <Style Selector="TextBlock.h3">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontWeight" Value="Bold" />
+        </Style>
         <Style Selector="TextBlock.b">
             <Setter Property="FontWeight" Value="Bold" />
         </Style>
